Always activate through MockDeployer